# DeltaStream

./: .gitignore  EXECUTION.md  PLAN.md  PROGRESS.md  README.md  benchmark.py  benchmark_e2e.py  debug_inference.py  inspect_deltastream.py  pyproject.toml  requirements.txt  run.py  setup.sh  test_generate.py
delta_TinyLlama-1.1B-Chat-v1.0/: manifest.json
delta_tinyllama_1.1b_chat_v1.0/: manifest.json
deltastream/: __init__.py  __main__.py  main.py  runtime.py
deltastream/cli/: __init__.py  convert.py  verify.py
deltastream/core/: __init__.py  cache.py  delta_decoder.py  delta_encoder.py  io_backend.py  io_backend_uring.py  manifest.py  memory.py  weight_io.py
deltastream/utils/: __init__.py  logging.py
tests/: test_cache.py  test_compression.py  test_roundtrip.py
